--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-2JC70GGH\\SQLEXPRESS;Initial Catalog=Bulky;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
+
   "AllowedHosts": "*"
+  
 }
