Repository pattern added and unitoWork also added,mvc area applied

--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-2JC70GGH\\SQLEXPRESS;Initial Catalog=Bulky;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-2JC70GGH;Initial Catalog=BulkyWeb;Integrated Security=True;Trust Server Certificate=True"
   },
 
   "AllowedHosts": "*"
