--- a/.github/workflows/master_mvcdontnet.yml
+++ b/.github/workflows/master_mvcdontnet.yml
@@ -59,7 +59,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'mvcdotnetbulky'
+          app-name: 'mvcdontnet'
           slot-name: 'Production'
           package: .
           
