--- a/Bulky/BulkyWeb/appsettings.Production.json
+++ b/Bulky/BulkyWeb/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:bulkybookfkp.database.windows.net,1433;Initial Catalog=BulkyBook;Persist Security Info=False;User ID=sqladmin;Password={Admin@1234};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:bulkybookfkp.database.windows.net,1433;Initial Catalog=BulkyBook;Persist Security Info=False;User ID=sqladmin;Password={Admin%401234};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
